# plume

./: .gitignore  .lintstagedrc  .prettierignore  .prettierrc  CONTRIBUTING.md  LICENSE.md  README.md  ROADMAP.md  eslint.config.js  index.html  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
coverage/: index.html  lcov.info
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: compression.rs  compression_commands.rs  database.rs  file.rs  file_commands.rs  mod.rs  progress.rs  stats.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/compression/: engine.rs  error.rs  formats.rs  mod.rs  prediction.rs  progress.rs  settings.rs  stats.rs  store.rs
src-tauri/src/domain/entities/: compression_settings.rs  image.rs  mod.rs
src-tauri/src/domain/file/: error.rs  metadata.rs  mod.rs  operations.rs  path.rs
src-tauri/src/domain/image/: analysis.rs  error.rs  metadata.rs  mod.rs  processing.rs
src-tauri/src/domain/services/: compression_service.rs  file_service.rs  mod.rs
src-tauri/src/domain/shared/: config.rs  error.rs  events.rs  mod.rs  utils.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/compression/: jpeg_compressor.rs  mod.rs  oxipng_compressor.rs  webp_compressor.rs
(+203 files in other folders)
