[package]
name = "plume"
version = "0.1.0"
description = "Smart Image Compression Desktop App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "plume_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"

# Compression d'images
oxipng = "9.1"
image = "0.25"
mozjpeg-sys = "2.2"
webp = "0.3"

# Async pour les gros fichiers
tokio = { version = "1.0", features = ["fs", "rt-multi-thread"] }

# Utilitaires système
dirs = "5.0"
base64 = "0.22"
thiserror = "1.0"

rfd = "0.14"
